--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 TIMES=2
-
-MONGOLAB_URI=mongodb://exportPrecision:tu08686040@ds121456.mlab.com:21456/heroku_jc8bbnth
+MONGOLAB_URI=mongodb+srv://heroku_jc8bbnth:Atelie2020Precision@heroku-jc8bbnth.mvtte.mongodb.net/heroku-jc8bbnth?retryWrites=true&w=majority
+#MONGOLAB_URI=mongodb://exportPrecision:tu08686040@ds121456.mlab.com:21456/heroku_jc8bbnth
 #MONGODB_URI=mongodb://localhost:27017/DBMprecision
 
 
